# dracon

./: .gitignore  404.html  CITATION.cff  DOCSUMMARY.md  LICENSE  README.md  dracon_complete.py  dracon_print.py  index.html  mkdocs.yml  pyproject.toml  repomix-output.txt  repomix.config.json  requirements.txt
.github/workflows/: docs.yml  draft-pdf.yml
bugs/: if-inside-sequence-interpolation-paths.md
cli/: index.html
deferred/: index.html
docs/: advanced.md  cli.md  deferred.md  includes.md  index.md  instructions.md  interpolation.md  keypaths.md  loading.md  merging.md  quickstart.md  resolvable.md  types.md
docs/concepts/: cli.md  composition.md  context-and-scope.md  deferred-resolvable.md  index.md  instructions.md  interpolation.md  lifecycle.md  loading.md  merge-algebra.md  open-vocabulary.md  primitives.md  pydantic.md
docs/guides/: advanced-features.md  basic-features.md  cli-patterns.md  config-layering.md  customize-cli.md  debugging.md  deferred-execution.md  dracon-and-broodmon.md  extending-dracon.md  handle-secrets.md  index.md  inspect-configs.md  load-config.md  merge-configs.md  migration-from-hydra.md  observing-progress.md  secrets-and-env.md  serialization.md  use-deferred.md  use-fn.md  use-includes.md  use-interpolation.md  use-pydantic.md  use-templates.md  yaml-functions.md
docs/patterns/: anti-patterns.md  composition-stack.md  config-templates.md  constructor-slots.md  dynamic-skeleton.md  higher-order-config.md  hybrid-pipelines.md  index.md  layered-vocabularies.md  runtime-contracts.md  sweep-generation.md  weighted-registries.md
docs/reference/: cli-api.md  cli_arg.md  dracon-cli.md  dracon_print.md  include-schemes.md  include_syntax.md  index.md  instruction-tags.md  instruction_tags.md  (+9 more)
dracon/: __init__.py  asizeof.py  callable.py  cascade.py  cascade_select.py  cli.py  cli_declaration.py  cli_discovery.py  cli_param.py  commandline.py  composer.py  composition_trace.py  deferred.py  diagnostics.py  draconstructor.py  dracontainer.py  framing.py  generator.py  include.py  instructions.py  interpolation.py  interpolation_utils.py  keypath.py  lazy.py  lazy_typed.py  loader.py  locator.py  merge.py  nodes.py  partial.py  pipe.py  postprocess.py  progress.py  raw.py  ref.py  representer.py  resolution.py  resolvable.py  rewriter.py  stack.py  (+7 more)
examples/: main.py  models.py
includes/: index.html
instructions/: index.html
interpolation/: index.html
keypaths/: index.html
loading/: index.html
merging/: index.html
paper/: JOSS_SUBMISSION_CHECKLIST.md  paper.bib  paper.md
resolvable/: index.html
search/: search_index.json
types/: index.html
(+212 files in other folders)
