[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dracon"
authors = [{name = "Jean Disset", email = "jdisset@mit.edu"}]
version = "0.1.1"
description = "Type-safe configuration system and command-line interface (CLI) generator built on top of YAML."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "ruamel.yaml",
	"xxhash",
	"asteval",
	"cachetools",
	"regex"
]

[project.optional-dependencies]
test = ["pytest"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
    "mkdocstrings[python]",
    "mkdocs-macros-plugin",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
	"mkdocs-include-markdown-plugin",
	"mkdocs-print-site-plugin"
]

[project.scripts]
dracon-print = "dracon_print:main"

[tool.hatch.build.targets.wheel]
packages = ["dracon"]

[tool.hatch.build.targets.sdist]
include = [
    "/dracon",
    "/tests",
]

[tool.hatch.version]
path = "dracon/__init__.py"
